update Mode.css and index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link media="all" rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <title>MoneyMetrics</title>
 
@@ -31,9 +32,15 @@
             <label for="Input_NFT" class="mode-label">NFT</label>
             <input type="radio" id="Input_Lending" name="Choice" value="Lending" class="mode-radio">
             <label for="Input_Lending" class="mode-label">Lending/Borrowing</label>
+            <a href="https://twitter.com/0xLazard" target="_blank">
+                <i class="fab fa-twitter twitter-icon"></i>
+            </a>
+
         </div>
         <input type="checkbox" class="menu-button-checkbox" id="menu-button-checkbox">
         <label for="menu-button-checkbox" class="menu-button">☰ Menu</label>
+
+
     </div>
 
 
