update Mode.css and index.html

--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
             </a>
 
         </div>
-        <input type="checkbox" class="menu-button-checkbox" id="menu-button-checkbox">
-        <label for="menu-button-checkbox" class="menu-button">☰ Menu</label>
+        <div class="top-bar">
+            <input type="checkbox" class="menu-button-checkbox" id="menu-button-checkbox">
+            <label for="menu-button-checkbox" class="menu-button">☰ Menu</label>
+            <a href="https://twitter.com/0xLazard" target="_blank">
+                <i class="fab fa-twitter twitter-icon-menu"></i>
+            </a>
+        </div>
 
 
     </div>
