--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <a href="https://twitter.com/0xLazard" target="_blank">
                 <i class="fab fa-twitter twitter-icon"></i>
             </a>
+            <a href="https://medium.com/@0xLazard" target="_blank">
+                <i class="fab fa-medium medium-icon"></i>
+            </a>
+
 
         </div>
         <div class="top-bar">
@@ -42,6 +46,9 @@
             <label for="menu-button-checkbox" class="menu-button">☰ Menu</label>
             <a href="https://twitter.com/0xLazard" target="_blank">
                 <i class="fab fa-twitter twitter-icon-menu"></i>
+            </a>
+            <a href="https://medium.com/@0xLazard" target="_blank">
+                <i class="fab fa-medium medium-icon-menu"></i>
             </a>
         </div>
 
