--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
 
 
-        <div class="AffichageDroite">
+        <div class="AffichageDroite" id="AffichageDroiteID">
             <p id="ResultatCalcul" class="trading-result"></p>
             <p id="WalletBenefice" class="trading-result"></p>
             <p id="WalletPerte" class="trading-result"></p>
@@ -255,7 +255,7 @@
         </div>
 
 
-        <div class="AffichageDroite">
+        <div class="AffichageDroite" id="AffichageDroiteIDStaking">
             <p id="ResultatCalculStaking" class="trading-result"></p>
             <p id="WalletBeneficeStaking" class="trading-result"></p>
             <p id="CommissionStaking" class="trading-result"></p>
@@ -325,7 +325,7 @@
             </section>
         </div>
 
-        <section class="AffichageDroite">
+        <section class="AffichageDroite" id="AffichageDroiteIDNFT">
             <p id="ResultatCalculNFT" class="nft-result"></p>
             <p id="WalletBeneficeNFT" class="nft-result"></p>
             <p id="PourcentageNFT" class="nft-result"></p>
@@ -425,7 +425,7 @@
             </div>
 
         </div>
-        <div class="AffichageDroite">
+        <div class="AffichageDroite" id="AffichageDroiteIDLending">
             <p id="ResultatPret" class="pret-emprunt-result"></p>
             <p id="ResultatEmprunt" class="pret-emprunt-result"></p>
             <p id="InteretsPret" class="pret-emprunt-result"></p>
