update Affichage.css, label.css, Page.css and index.html

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         <div class="AffichageGauche">
 
             <form class="trading-form">
-                <p class="trading-choice">Please select your trading mode</p>
+                <!-- <p class="trading-choice">Please select your trading mode</p> -->
                 <div class="trading-option">
                     <label for="Input_Spot" class="trading-label">
                         <input type="radio" id="Input_Spot" name="contact" value="Spot" class="trading-radio" checked>
-                        Spot
+                        <p class="reverse">Spot</p>
                     </label>
-                    <label for="Input_Levier" class="trading-label">
+                    <label for="Input_Levier" class="trading-labe">
                         <input type="radio" id="Input_Levier" name="contact" value="Levier" class="trading-radio">
                         Leverrage
                     </label>
@@ -89,20 +89,22 @@
 
 
             <div id="Block_Levier" class="block_levier">
-                <p id="Phrase_Levier" class="lever-choice">Please select your positin type
-                </p>
+                <!-- <p id="Phrase_Levier" class="lever-choice">Please select your positin type
+                </p> -->
                 <div class="lever-option">
 
                     <label for="Input_Long" class="lever-label">
-                        <input type="radio" id="Input_Long" name="contact" value="Long" class="lever-radio">Long</label>
+                        <input type="radio" id="Input_Long" name="contact" value="Long" class="lever-radio">
+                        <p class="LongReverse">Long</p>
+                    </label>
 
 
-                    <label for="Input_Short" class="lever-label"> <input type="radio" id="Input_Short" name="contact"
+                    <label for="Input_Short" class="lever-label1"> <input type="radio" id="Input_Short" name="contact"
                             value="Short" class="lever-radio">Short</label>
                 </div>
 
                 <div class="range-form">
-                    <p id="PhraseSelection_Levier" class="lever-input-choice">Choose effect of Leverrage</p>
+                    <!-- <p id="PhraseSelection_Levier" class="lever-input-choice">Choose effect of Leverrage</p> -->
                     <div class="lever-range-option">
                         <div class="lever-buttons-wrapper" id="levierbuttonsfast">
 
