--- a/index.html
+++ b/index.html
@@ -31,25 +31,27 @@
             <input type="radio" id="Input_NFT" name="Choice" value="NFT" class="mode-radio">
             <label for="Input_NFT" class="mode-label">NFT</label>
             <input type="radio" id="Input_Lending" name="Choice" value="Lending" class="mode-radio">
-            <label for="Input_Lending" class="mode-label">Lending/Borrowing</label>
-            <a href="https://twitter.com/0xLazard" target="_blank">
-                <i class="fab fa-twitter twitter-icon"></i>
-            </a>
-            <a href="https://medium.com/@0xLazard" target="_blank">
-                <i class="fab fa-medium medium-icon"></i>
-            </a>
-
-
+            <label for="Input_Lending" class="mode-label">Lending</label>
+            <div class="Logo">
+                <a href="https://twitter.com/0xLazard" target="_blank">
+                    <i class="fab fa-twitter twitter-icon"></i>
+                </a>
+                <!-- <a href="https://medium.com/@0xLazard" target="_blank">
+                    <i class="fab fa-medium medium-icon"></i>
+                </a> -->
+            </div>
         </div>
+
+
         <div class="top-bar">
             <input type="checkbox" class="menu-button-checkbox" id="menu-button-checkbox">
             <label for="menu-button-checkbox" class="menu-button">☰ Menu</label>
             <a href="https://twitter.com/0xLazard" target="_blank">
                 <i class="fab fa-twitter twitter-icon-menu"></i>
             </a>
-            <a href="https://medium.com/@0xLazard" target="_blank">
+            <!-- <a href="https://medium.com/@0xLazard" target="_blank">
                 <i class="fab fa-medium medium-icon-menu"></i>
-            </a>
+            </a> -->
         </div>
 
 
