--- a/index.html
+++ b/index.html
@@ -364,33 +364,29 @@
 
 
         <div class="AffichageGauche">
-            <form class="pret-emprunt-form">
-                <p class="pret-emprunt-choice">Veuillez sélectionner votre choix : Prêt ou Emprunt</p>
-                <div class="pret-emprunt-option">
-                    <input type="radio" id="Input_Pret" name="typeOperation" value="pret" class="pret-emprunt-radio"
-                        checked>
-                    <label for="Input_Pret" class="pret-emprunt-label">Lending</label>
-                    <input type="radio" id="Input_Emprunt" name="typeOperation" value="emprunt"
-                        class="pret-emprunt-radio">
-                    <label for="Input_Emprunt" class="pret-emprunt-label">Borrowing</label>
+            <form class="trading-form">
+                <div class="trading-option">
+                    <input type="radio" id="Input_Pret" name="typeOperation" value="pret" class="trading-radio" checked>
+                    <label for="Input_Pret" class="trading-label">Lending</label>
+                    <input type="radio" id="Input_Emprunt" name="typeOperation" value="emprunt" class="trading-radio">
+                    <label for="Input_Emprunt" class="trading-labe">Borrowing</label>
                 </div>
             </form>
 
             <div class="temps-range-wrapper">
-                <p id="PhraseSelection_Temps_Lending" class="temps-input-label">Sélectionnez le temps de la position
-                </p>
-                <div class="temps-buttons-wrapper">
-                    <button class="temps-button-lending" data-days="1">1 Jour</button>
-                    <button class="temps-button-lending" data-days="7">1 Semaine</button>
-                    <button class="temps-button-lending" data-days="182">6 Mois</button>
-                    <button class="temps-button-lending" data-days="365">1 An</button>
+                <p id="PhraseSelection_Temps_Lending" class="temps-input-label"></p>
+                <div class="buttons-wrapper">
+                    <button class="button" data-days="1">1 Day</button>
+                    <button class="button" data-days="7">1 Week</button>
+                    <button class="button" data-days="182">6 Month</button>
+                    <button class="button" data-days="365">1 Year</button>
                 </div>
                 <input type="range" min="1" max="365" id="Input_RangeTemps_Lending" class="temps-range" />
                 <span id="Temps_Value_Lending" class="temps-value-display">1</span>
             </div>
 
             <div class="pret-emprunt-input-wrapper" id="Wrapper_FrequenceCapitalisation">
-                <p class="pret-emprunt-input-label">Fréquence de capitalisation :</p>
+                <p class="pret-emprunt-input-label">Capitilusation frequency :</p>
                 <select id="Input_FrequenceCapitalisationLendingBorrwing" class="pret-emprunt-input">
                     <option value="daily">Quotidienne</option>
                     <option value="monthly">Mensuelle</option>
@@ -408,19 +404,22 @@
 
 
             <div class="pret-emprunt-input-wrapper">
-                <p class="pret-emprunt-input-label">Montant :</p>
-                <input type="number" min="0" step="0.000001" id="Input_Montant" class="pret-emprunt-input">
+                <p class="pret-emprunt-input-label"></p>
+                <input type="number" min="0" step="0.000001" id="Input_Montant" class="pret-emprunt-input"
+                    placeholder="Amount">
             </div>
 
             <div class="pret-emprunt-input-wrapper">
-                <p class="pret-emprunt-input-label">Taux d'intérêt (% annuel) :</p>
-                <input type="number" min="0" step="0.000001" id="Input_TauxInteret" class="pret-emprunt-input">
+                <p class="pret-emprunt-input-label"></p>
+                <input type="number" min="0" step="0.000001" id="Input_TauxInteret" class="pret-emprunt-input"
+                    placeholder="Interest Rate (%)">
             </div>
 
 
             <div class="pret-emprunt-input-wrapper" id="Wrapper_FraisPlateforme">
-                <p class="pret-emprunt-input-label">Frais de plateforme (% annuel) :</p>
-                <input type="number" min="0" step="0.000001" id="Input_FraisPlateforme" class="pret-emprunt-input">
+                <p class="pret-emprunt-input-label"></p>
+                <input type="number" min="0" step="0.000001" id="Input_FraisPlateforme" class="pret-emprunt-input"
+                    placeholder="MarketPlace Fees (%)">
             </div>
 
         </div>
