--- a/index.html
+++ b/index.html
@@ -381,58 +381,61 @@
                     <button class="button" data-days="182">6 Month</button>
                     <button class="button" data-days="365">1 Year</button>
                 </div>
-                <input type="range" min="1" max="365" id="Input_RangeTemps_Lending" class="temps-range" />
-                <span id="Temps_Value_Lending" class="temps-value-display">1</span>
+                <div class="range">
+                    <input type="range" min="1" max="365" id="Input_RangeTemps_Lending" class="range-inputLending " />
+                    <span id="Temps_Value_Lending" class="value-displayLending">1</span>
+                </div>
+            </div>
+            <div class="InputClass">
+                <div class="trading-input-wrapper" id="Wrapper_FrequenceCapitalisation">
+                    <p class="pret-emprunt-input-label">Capitilusation frequency :</p>
+                    <select id="Input_FrequenceCapitalisationLendingBorrwing" class="trading-input">
+                        <option value="daily">Quotidienne</option>
+                        <option value="monthly">Mensuelle</option>
+                        <option value="quarterly">Trimestrielle</option>
+                        <option value="annually">Annuelle</option>
+                    </select>
+                </div>
+
+                <div class="pret-emprunt-input-wrapper" id="Wrapper_Recomposition">
+                    <input type="checkbox" id="Input_Recomposition" class="pret-emprunt-checkbox">
+                    <label for="Input_Recomposition">AutoCompound</label>
+                </div>
+
+
+
+                <div class="trading-input-wrapper">
+                    <p class="pret-emprunt-input-label"></p>
+                    <input type="number" min="0" step="0.000001" id="Input_Montant" class="trading-input"
+                        placeholder="Amount">
+                </div>
+
+                <div class="trading-input-wrapper">
+                    <p class="pret-emprunt-input-label"></p>
+                    <input type="number" min="0" step="0.000001" id="Input_TauxInteret" class="trading-input"
+                        placeholder="Interest Rate (%)">
+                </div>
+
+
+                <div class="trading-input-wrapper" id="Wrapper_FraisPlateforme">
+                    <p class="pret-emprunt-input-label"></p>
+                    <input type="number" min="0" step="0.000001" id="Input_FraisPlateforme" class="trading-input"
+                        placeholder="MarketPlace Fees (%)">
+                </div>
+
             </div>
 
-            <div class="pret-emprunt-input-wrapper" id="Wrapper_FrequenceCapitalisation">
-                <p class="pret-emprunt-input-label">Capitilusation frequency :</p>
-                <select id="Input_FrequenceCapitalisationLendingBorrwing" class="pret-emprunt-input">
-                    <option value="daily">Quotidienne</option>
-                    <option value="monthly">Mensuelle</option>
-                    <option value="quarterly">Trimestrielle</option>
-                    <option value="annually">Annuelle</option>
-                </select>
-            </div>
 
-            <div class="pret-emprunt-input-wrapper" id="Wrapper_Recomposition">
-                <p class="pret-emprunt-input-label">Recomposition des intérêts :</p>
-                <input type="checkbox" id="Input_Recomposition" class="pret-emprunt-checkbox">
-                <label for="Input_Recomposition">Réinvestir les intérêts</label>
-            </div>
-
-
-
-            <div class="pret-emprunt-input-wrapper">
-                <p class="pret-emprunt-input-label"></p>
-                <input type="number" min="0" step="0.000001" id="Input_Montant" class="pret-emprunt-input"
-                    placeholder="Amount">
-            </div>
-
-            <div class="pret-emprunt-input-wrapper">
-                <p class="pret-emprunt-input-label"></p>
-                <input type="number" min="0" step="0.000001" id="Input_TauxInteret" class="pret-emprunt-input"
-                    placeholder="Interest Rate (%)">
-            </div>
-
-
-            <div class="pret-emprunt-input-wrapper" id="Wrapper_FraisPlateforme">
-                <p class="pret-emprunt-input-label"></p>
-                <input type="number" min="0" step="0.000001" id="Input_FraisPlateforme" class="pret-emprunt-input"
-                    placeholder="MarketPlace Fees (%)">
+            <div class="AffichageDroite" id="AffichageDroiteIDLending">
+                <p id="ResultatPret" class="pret-emprunt-result"></p>
+                <p id="ResultatEmprunt" class="pret-emprunt-result"></p>
+                <p id="InteretsPret" class="pret-emprunt-result"></p>
+                <p id="InteretsEmprunt" class="pret-emprunt-result"></p>
+                <p id="FraisTotal" class="pret-emprunt-result"></p>
+                <p id="ErrorContainerPretEmprunt" class="pret-emprunt-error"></p>
             </div>
 
         </div>
-        <div class="AffichageDroite" id="AffichageDroiteIDLending">
-            <p id="ResultatPret" class="pret-emprunt-result"></p>
-            <p id="ResultatEmprunt" class="pret-emprunt-result"></p>
-            <p id="InteretsPret" class="pret-emprunt-result"></p>
-            <p id="InteretsEmprunt" class="pret-emprunt-result"></p>
-            <p id="FraisTotal" class="pret-emprunt-result"></p>
-            <p id="ErrorContainerPretEmprunt" class="pret-emprunt-error"></p>
-        </div>
-
-
         <div class="AffichageDeuxButton">
             <div class="AffichageButtonResult">
                 <button type="button" id="Button_CalculerPretEmprunt" class="ButtonAffichageSousResult">Results</button>
