update DOM.js and index.html

--- a/index.html
+++ b/index.html
@@ -73,15 +73,16 @@
             <div>
 
                 <div class="Composent_Generaux_Radio">
-                    <div class="Composent_SpotLevier_Radio">
-                        <label for="Input_Spot" class="Composent_Generaux_Text">
-                            <input type="radio" id="Input_Spot" name="contact" value="Spot" checked class="Radio">Spot
-                        </label>
-                        <label for="Input_Levier" class="Composent_Generaux_Text">
-                            <input type="radio" id="Input_Levier" name="contact" value="Levier" class="Radio">Leverage
-                        </label>
-                    </div>
-
+                    <form>
+                        <div class="Composent_SpotLevier_Radio">
+                            <label for="Input_Spot" class="Composent_Generaux_Text">
+                                <input type="radio" id="Input_Spot" name="contact" value="Spot">Spot
+                            </label>
+                            <label for="Input_Levier" class="Composent_Generaux_Text">
+                                <input type="radio" id="Input_Levier" name="contact" value="Levier">Leverage
+                            </label>
+                        </div>
+                    </form>
 
 
                     <div id="Block_Levier">
