--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
             </div>
 
-            <div id="AffichageDroiteID">
+            <div id="AffichageDroiteID" class="AffichageDroite">
                 <p id="ResultatCalcul"></p>
                 <p id="WalletBenefice"></p>
                 <p id="WalletPerte"></p>
