update Composent.css and index.html

--- a/index.html
+++ b/index.html
@@ -105,20 +105,20 @@
 
                 </div>
 
-                <div>
+                <div class="Composoent_LevierButton">
                     <p id="PhraseSelection_Levier"></p>
                     <div>
-                        <div id="levierbuttonsfast">
-                            <button data-lever="8">x8</button>
-                            <button data-lever="20">x20</button>
-                            <button data-lever="25">x25</button>
-                            <button data-lever="100">x100</button>
+                        <div id="levierbuttonsfast" class="Composent_Trading_Button">
+                            <button data-lever="8" class="Composent_TradingButton_Selection">x8</button>
+                            <button data-lever="20" class="Composent_TradingButton_Selection">x20</button>
+                            <button data-lever="25" class="Composent_TradingButton_Selection">x25</button>
+                            <button data-lever="100" class="Composent_TradingButton_Selection">x100</button>
                         </div>
                     </div>
 
-                    <div>
-                        <input type="range" min="1" max="100" id="Input_RangeLevier">
-                        <span id="Levier_Value">1</span>
+                    <div class="Composent_Tranding_Range_General">
+                        <input type="range" min="1" max="100" id="Input_RangeLevier" class="Composent_Trading_Range">
+                        <span id="Levier_Value" class="Composent_Trading_LevierValue">1</span>
                     </div>
                 </div>
 
