update Composent.css and index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
 
 
-                <div>
+                <div class="Composent_Input_ClassBOX">
                     <div>
                         <input type="number" placeholder="Entry Price (UST)" step="10" min="0" max="100"
                             id="Input_Prixdentree">
